# direct_optimal_mapping

./: .coveragerc  AUTHORS.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
optimal_mapping/: data_conditioning.py  optimal_mapping.py  optimal_mapping_horizon.py  pixel_selection.py  skeleton.py
src/: __init__.py  optimal_mapping.py  optimal_mapping_horizon.py  optimal_mapping_radec_grid.py  pixel_selection.py  ps_calc.py
src/direct_optimal_mapping/: __init__.py  conversions.py  data_conditioning.py  dom_pspec.py  horizon_map.py  image_cube_compilation.py  optimal_mapping.py  optimal_mapping_horizon.py  optimal_mapping_radec_grid.py  sky_models.py
src/direct_optimal_mapping/legacy/: optimal_mapping_horizon.py  optimal_mapping_legacy.py
src/optimal_mapping/: skeleton.py
src/temp/dom_pspec/: __init__.py
src/temp/mapping/: data_conditioning.py  optimal_mapping.py
tests/: conftest.py  test_skeleton.py  test_skypx.py
tutorials/: img_ps_tutorial.ipynb
