[metadata]
name = optimal_mapping
description = Optimal Mapping for HERA Data
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/HERA-Team/direct_optimal_mapping
author = Zhilei Xu
author_email = astro.zlxu@gmail.com
license = MIT
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
project_urls = https://github.com/HERA-Team/direct_optimal_mapping
    Documentation = 

[options]
packages = find_namespace:
install_requires =
    importlib-metadata;python_version<"3.8"
include_package_data = True
package_dir =
    =optimal_mapping
zip_safe = False

[options.packages.find]
where = optimal_mapping
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    setuptools

[tool:pytest]
addopts =
    --cov optimal_mapping --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[bdist_wheel]
universal = 1

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 0.0.0
package = optimal_mapping
